<resources>
    <string name="app_name">Brainiac</string>
    <string name="long_app_name">Welcome to Brainiac</string>
    <string name="app_comp">www.chathuminavimukthi.me</string>
    <string name="action_settings"> Settings </string>
    <string name="continue_label"> Continue </string>
    <string name="new_game_label"> New Game </string>
    <string name="about_label"> About </string>
    <string name="ok_label">OK </string>
    <string name="cancel">CANCEL</string>
    <string name="exit_label">Exit</string>
    <string name="settings_label">Settings</string>
    <string name="about_title"> About Ultimate Tic Tac Toe </string>
    <string name="about_text">\
This game is played just like regular Tic Tac Toe with one
difference: to win a tile you have to win a smaller game
of Tic Tac Toe inside that tile.\ n\ n
A tie happens when there are no further moves . In the case
of a tie in a small board , that will count as a win for both
sides in the larger game.
</string>

    <string name="novice_label">Novice</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Guru</string>
    <string name="level_select">Select your level to \n    continue</string>
    <string name="hint">?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="continue_head"> No saved game data to continue!</string>
    <string name="continue_txt">Please use New Game option instead.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>