<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background ="@drawable/frag_background"
    android:elevation ="@dimen/elevation_high"
    android:orientation ="vertical"
    android:padding ="@dimen/menu_padding"
    tools:context=".Menu">

    <TextView
        android:layout_width ="wrap_content"
        android:layout_height ="wrap_content"
        android:layout_marginBottom ="@dimen/menu_space"
        android:text ="@string/long_app_name"
        android:textAppearance ="?android:textAppearanceLarge"
        android:textSize ="@dimen/menu_text_size"
        android:textColor="@color/white"/>

    <Button
        android:id ="@+id/continue_button"
        android:layout_width ="match_parent"
        android:layout_height ="wrap_content"
        android:background="@drawable/continuegame"
        android:layout_margin ="@dimen/menu_button_margin"
        android:padding ="@dimen/menu_button_padding"
        android:text ="@string/continue_label"
        android:textColor="@color/white"/>
    <Button
        android:id ="@+id/new_button"
        android:layout_width ="match_parent"
        android:layout_height ="wrap_content"
        android:layout_gravity ="center"
        android:background="@drawable/newgame"
        android:layout_margin ="@dimen/menu_button_margin"
        android:padding ="@dimen/menu_button_padding"
        android:text ="@string/new_game_label"
        android:textColor="@color/white"/>
    <Button
        android:id ="@+id/about_button"
        android:layout_width ="match_parent"
        android:layout_height ="wrap_content"
        android:layout_gravity ="center"
        android:background="@drawable/about"
        android:layout_margin ="@dimen/menu_button_margin"
        android:padding ="@dimen/menu_button_padding"
        android:text ="@string/about_label"
        android:textColor="@color/white"/>
    <Button
        android:id ="@+id/settings_btn"
        android:layout_width ="match_parent"
        android:layout_height ="wrap_content"
        android:layout_gravity ="center"
        android:background="@drawable/exit"
        android:layout_margin ="@dimen/menu_button_margin"
        android:padding ="@dimen/menu_button_padding"
        android:text ="@string/settings_label"
        android:textColor="@color/white"/>
    <Button
        android:id ="@+id/exit_button"
        android:layout_width ="match_parent"
        android:layout_height ="wrap_content"
        android:layout_gravity ="center"
        android:background="@drawable/exit"
        android:layout_margin ="@dimen/menu_button_margin"
        android:padding ="@dimen/menu_button_padding"
        android:text ="@string/exit_label"
        android:textColor="@color/white"/>

</LinearLayout>
